--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -4,7 +4,7 @@
     <title>Lab 1</title>
     <meta charset="utf-8">
     <meta name="description" content="Lab 1">
-    <LINK href="styles.css" rel="stylesheet" type="text/css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="one">
