Calculate an area of a pentagon instead of a rectangle

--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -69,7 +69,7 @@
                         <button type="button" onclick="showFormInputs()">X (Reveal form inputs)</button>
                     </div>
 
-                    <form name="numberInput" onsubmit="return reverseRectangleArea()">
+                    <form name="numberInput" onsubmit="return reverseNumber()">
                         <label for="number">Enter a number</label><br>
                         <input type="text" id="number" name="number"><br>
                         <input type="submit" value="Submit">
