--- a/lab1/lab1_3.html
+++ b/lab1/lab1_3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="one">
-    <h1>Lab 1</h1>
+    <div class="rectangle center">X</div>
     <ul>
         <li><a href="lab1.html">Copy 1</a></li>
         <li><a href="lab1_2.html">Copy 2</a></li>
@@ -16,32 +16,49 @@
         <li><a href="lab1_4.html">Copy 4</a></li>
         <li><a href="lab1_5.html">Copy 5</a></li>
     </ul>
+    <div class="title">1</div>
 </div>
 <div class="content">
     <div class="two">
+        <div class="title">2</div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales neque sodales ut etiam. Egestas sed sed risus pretium quam vulputate dignissim suspendisse in. Interdum posuere lorem ipsum dolor sit amet consectetur. Amet facilisis magna etiam tempor orci eu lobortis elementum nibh. Tristique senectus et netus et malesuada fames ac. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Morbi enim nunc faucibus a pellentesque sit. Eget gravida cum sociis natoque penatibus. Blandit cursus risus at ultrices mi tempus. Velit scelerisque in dictum non.</p>
+        <a href="https://en.wikipedia.org/wiki/Web_application">
+            <img src="https://www.gortnm.com/uploads/1625570277.png" alt="web applications">
+        </a>
     </div>
     <div class="right-part">
         <div class="three">
+            <div class="title">3</div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales neque sodales ut etiam. Egestas sed sed risus pretium quam vulputate dignissim suspendisse in. Interdum posuere lorem ipsum dolor sit amet consectetur. Amet facilisis magna etiam tempor orci eu lobortis elementum nibh. Tristique senectus et netus et malesuada fames ac. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Morbi enim nunc faucibus a pellentesque sit. Eget gravida cum sociis natoque penatibus. Blandit cursus risus at ultrices mi tempus. Velit scelerisque in dictum non.</p>
         </div>
         <div class="horizontal">
             <div class="vertical" style="width: 70%">
                 <div class="four">
+                    <div class="title">4</div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales neque sodales ut etiam. Egestas sed sed risus pretium quam vulputate dignissim suspendisse in. Interdum posuere lorem ipsum dolor sit amet consectetur. Amet facilisis magna etiam tempor orci eu lobortis elementum nibh. Tristique senectus et netus et malesuada fames ac. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Morbi enim nunc faucibus a pellentesque sit. Eget gravida cum sociis natoque penatibus. Blandit cursus risus at ultrices mi tempus. Velit scelerisque in dictum non.</p>
+
+                    <img src="https://www.w3schools.com/tags/workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+
+                    <map name="workmap">
+                        <area shape="rect" coords="34,44,270,350" alt="Computer" href="https://en.wikipedia.org/wiki/MacBook">
+                        <area shape="rect" coords="290,172,333,250" alt="Phone" href="https://en.wikipedia.org/wiki/IPhone">
+                        <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="https://en.wikipedia.org/wiki/Coffee">
+                    </map>
                 </div>
                 <div class="six">
+                    <div class="title">6</div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales neque sodales ut etiam. Egestas sed sed risus pretium quam vulputate dignissim suspendisse in. Interdum posuere lorem ipsum dolor sit amet consectetur. Amet facilisis magna etiam tempor orci eu lobortis elementum nibh. Tristique senectus et netus et malesuada fames ac. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Morbi enim nunc faucibus a pellentesque sit. Eget gravida cum sociis natoque penatibus. Blandit cursus risus at ultrices mi tempus. Velit scelerisque in dictum non.</p>
                 </div>
             </div>
             <div class="five" style="width: 30%">
+                <div class="title">5</div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales neque sodales ut etiam. Egestas sed sed risus pretium quam vulputate dignissim suspendisse in. Interdum posuere lorem ipsum dolor sit amet consectetur. Amet facilisis magna etiam tempor orci eu lobortis elementum nibh. Tristique senectus et netus et malesuada fames ac. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Morbi enim nunc faucibus a pellentesque sit. Eget gravida cum sociis natoque penatibus. Blandit cursus risus at ultrices mi tempus. Velit scelerisque in dictum non.</p>
             </div>
         </div>
     </div>
 </div>
 <div class="seven">
-    <h1>Footer</h1>
+    <div class="rectangle left">X</div>
 </div>
 </body>
 </html>
