--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -58,7 +58,7 @@
     </div>
 </div>
 <div class="seven">
-    <div class="rectangle left">X</div>
+    <div class="rectangle left">Y</div>
 </div>
 </body>
 </html>
